@@ -441,7 +441,6 @@ endmenu
 
 menu "Package managers"
 source "package/ipkg/Config.in"
-source "package/portage/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/rpm/Config.in"
 endif
