@@ -1,11 +1,0 @@
-config BR2_PACKAGE_PORTAGE
-	bool "portage"
-	select BR2_PACKAGE_PYTHON
-	depends on BR2_USE_WCHAR
-	help
-	  Portage, the Gentoo package management tool.
-
-	  http://www.gentoo.org/
-
-comment "portage requires a toolchain with WCHAR support"
-	depends on !BR2_USE_WCHAR
